--- a/Linux Notes.html
+++ b/Linux Notes.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Linux Notes</title>
+    <link rel="icon" href="linux-notes-favicon.png" type="image/x-icon">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -11,59 +13,66 @@
             padding: 0;
             background-color: #f4f4f9;
         }
+
         header {
             background-color: #4CAF50;
             color: white;
             text-align: center;
             padding: 10px 0;
         }
+
         section {
             margin: 20px;
         }
+
         h2 {
             color: #333;
         }
+
         ul {
             list-style-type: disc;
             margin-left: 20px;
         }
+
         li {
             margin: 5px 0;
         }
     </style>
 </head>
+
 <body>
 
-<header>
-    <h1>Linux Notes</h1>
-</header>
+    <header>
+        <h1>Linux Notes</h1>
+    </header>
 
-<section>
-    <h2>Setting up Version Control</h2>
-    <ul>
-        <li>Placeholder item 1</li>
-        <li>Placeholder item 2</li>
-        <li>Placeholder item 3</li>
-    </ul>
-</section>
+    <section>
+        <h2>Setting up Version Control</h2>
+        <ul>
+            <li>Placeholder item 1</li>
+            <li>Placeholder item 2</li>
+            <li>Placeholder item 3</li>
+        </ul>
+    </section>
 
-<section>
-    <h2>Viewing Files</h2>
-    <ul>
-        <li>Placeholder item 1</li>
-        <li>Placeholder item 2</li>
-        <li>Placeholder item 3</li>
-    </ul>
-</section>
+    <section>
+        <h2>Viewing Files</h2>
+        <ul>
+            <li>Placeholder item 1</li>
+            <li>Placeholder item 2</li>
+            <li>Placeholder item 3</li>
+        </ul>
+    </section>
 
-<section>
-    <h2>Editing Files</h2>
-    <ul>
-        <li>Placeholder item 1</li>
-        <li>Placeholder item 2</li>
-        <li>Placeholder item 3</li>
-    </ul>
-</section>
+    <section>
+        <h2>Editing Files</h2>
+        <ul>
+            <li>Placeholder item 1</li>
+            <li>Placeholder item 2</li>
+            <li>Placeholder item 3</li>
+        </ul>
+    </section>
 
 </body>
+
 </html>
