Begin writing Linux notes to html file

--- a/Linux Notes.html
+++ b/Linux Notes.html
@@ -49,9 +49,22 @@
     <section>
         <h2>Setting up Version Control</h2>
         <ul>
-            <li>Placeholder item 1</li>
-            <li>Placeholder item 2</li>
-            <li>Placeholder item 3</li>
+            <li>Initialize local repository</li>
+            <ul>
+                <li>Command: <code>git init</code></li>
+                <li>Command: <code>git clone {repository-url}</code></li>
+            </ul>
+            <li>Make commitable edits and commit</li>
+            <ul>
+                <li>Command: <code>git add {file}</code></li>
+                <li>Command: <code>git commit -m "{Commit message}"</code></li>
+            </ul>
+            <li>Identify user information</li>
+            <ul>
+                <li>Command: <code>git config --global user.name "{Your Name}"</code></li>
+                <li>Command: <code>git config --global user.email "{Your Email}"</code></li>
+            </ul>
+
         </ul>
     </section>
 
